projects/qbsf/force-app/main/default/objects/QB_Integration_Log__c/QB_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Log entries for QuickBooks integration activities</description>
    <label>QB Integration Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>