projects/qbsf/force-app/main/default/objects/QB_Integration_Log__c/fields/QB_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_ID__c</fullName>
    <description>QuickBooks Invoice ID for this log entry</description>
    <label>QB Invoice ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>