projects/qbsf/force-app/main/default/objects/QB_Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration operation</description>
    <inlineHelpText>The status of the QuickBooks integration operation</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>